[package]
name = "terarium"
description = """
Wrapper for the Tera template system with template grouping and bulk rendering of templates.
"""
authors = [
    "Petr Jindra <el.mordo@gmail.com>"
]
version = "0.3.0"
license = "MIT"
edition = "2021"
keywords = ["template", "multi-template", "tera", "markup", "jinja2"]
categories = ["template-engine"]
rust-version = "1.71.0"
homepage = "https://github.com/elmordo/terarium"
repository = "https://github.com/elmordo/terarium"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "^1.19.1"
thiserror = "^1.0.49"
